Fix header not being visible on desktop

--- a/client-v2/src/app/components/templates/sidebar-layout/sidebar-layout.component.css
+++ b/client-v2/src/app/components/templates/sidebar-layout/sidebar-layout.component.css
@@ -10,3 +10,8 @@
 .main-header {
     @apply z-30 shadow-header;
 }
+@media (max-width: 768px) {
+    .main-header--mobile.hide {
+        @apply -translate-y-full;
+    }
+}
